@@ -6,21 +6,33 @@ import javafx.scene.Scene;
 import javafx.stage.Stage;
 
 import java.io.IOException;
-import java.util.Arrays;
+import java.nio.file.Files;
+import java.util.ArrayList;
 import java.util.List;
 
 public class HelloApplication extends Application {
-    public static final List<String> bookNames = Arrays.asList("The Hobbit", "The Ruins of Dawn", "The Marked Wedding");
+    public static final List<String> bookNames = new ArrayList<>();
+    public static final List<String> authorNames = new ArrayList<>();
+    public static final List<String> genreNames = List.of("Fiction", "Non-Fiction", "Fantasy", "Graphic Novel", "Romance", "Horror", "Science Fiction", "Biography", "History", "Poetry", "Drama", "Travel", "Children's", "Religion", "Mystery", "Thriller", "Crime");
+
     public static void main(String[] args) {
         launch();
     }
 
     @Override
     public void start(Stage stage) throws IOException {
+        bookNames.addAll(Files.readAllLines(Utils.getResourcePath("book_names.txt")));
+        authorNames.addAll(Files.readAllLines(Utils.getResourcePath("author_names.txt")));
+
         FXMLLoader fxmlLoader = new FXMLLoader(HelloApplication.class.getResource("hello-view.fxml"));
-        Scene scene = new Scene(fxmlLoader.load(), 320, 240);
+        Scene scene = new Scene(fxmlLoader.load(), 700, 700);
         stage.setTitle("Hello!");
         stage.setScene(scene);
         stage.show();
     }
+
+
+
+    
+    
 }
